--- a/.env
+++ b/.env
@@ -11,3 +11,13 @@ TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_WHATSAPP_NUMBER=whatsapp:+55xxxxxxxxxxxx
 
+POSTGRES_DB=maanaim_db
+POSTGRES_USER=maanaim_user
+POSTGRES_PASSWORD=maanaim_pass
+APP_SECRET_KEY=change-me
+APP_ALLOWED_HOSTS=localhost,127.0.0.1
+APP_PORT=8000
+APP_ENV=prod
+DOMAIN=localhost
+ADMIN_EMAIL=admin@localhost
+TIMEZONE=America/Sao_Paulo
